# cuda-algo-lab

./: .gitignore  CMakeLists.txt  README.md  setup.py
benchmark/: bench_add.py  bench_elu.py  bench_embedding.py  bench_gelu.py  bench_hist.py  bench_relu.py  bench_sgemv.py  bench_sigmoid.py  bench_swish.py  bench_transpose.py  bench_warpreduce.py
python/: add.py  elu.py  embedding.py  gelu.py  histogram.py  mat_transpose.py  relu.py  sgemv.py  sigmod.py  swish.py  warp_reduce.py
src/binding/: pybind.cu
src/cpu/: add.cpp  histgram.cpp
src/cuda/: add.cu  elu.cu  embedding.cu  gelu.cu  histgram.cu  mat_transpose.cu  relu.cu  sgemv.cu  sigmod.cu  swish.cu  warp_reduce_sum.cu
src/util/: benchmark_cuda.h  half_exp.h
triton/: fp8_gemm.py  triton_matmul.py
